--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Completa</title>
+    <title>Pág 1 EJ😉</title>
+    <link rel="icon" href="img/3900768.png">
     <link rel="stylesheet" href="estilo_pag1.css">
 </head>
 <body>
